--- a/Samples~/WebGLTemplates/FullscreenWindow/index.html
+++ b/Samples~/WebGLTemplates/FullscreenWindow/index.html
@@ -69,14 +69,18 @@
     const progressBar = document.querySelector("#progress-bar");
 
     const unityStartLoadingTime = performance.now();
+    let unityEndLoadingTime = 0;
     setTimeout(() => {
       createUnityInstance(document.querySelector("#unity-canvas"), settings, (progress) => {
         progressBar.style.right = 100 * (1 - progress) + "%";
       }).then(() => {
         progressBar.style.display = "none";
-        const unityEndLoadingTime = performance.now();
+        unityEndLoadingTime = performance.now();
         ym(window.yandexMetricaCounterId,'reachGoal','unityStart', { unityLoadTime: (unityEndLoadingTime - unityStartLoadingTime) / 1000 });
       }).catch((message) => {
+        const unityCrashTime = performance.now();
+        const unityCrashPlaytime = unityEndLoadingTime === 0 ? 0 : (unityCrashTime - unityEndLoadingTime) / 1000;
+        ym(window.yandexMetricaCounterId,'reachGoal','unityCrash', { unityCrashPlaytime: unityCrashPlaytime });
         alert(message);
       });
     }, 500); // Wait half a second before loading. Makes page more responsive on reload.
