--- a/Samples~/WebGLTemplates/FullscreenWindow/index.html
+++ b/Samples~/WebGLTemplates/FullscreenWindow/index.html
@@ -73,15 +73,18 @@
     setTimeout(() => {
       createUnityInstance(document.querySelector("#unity-canvas"), settings, (progress) => {
         progressBar.style.right = 100 * (1 - progress) + "%";
-      }).then(() => {
+      }).then((unityInstance) => {
         progressBar.style.display = "none";
         unityEndLoadingTime = performance.now();
+        unityInstance.Module.errorHandler = (errorMessage) => {
+          const unityCrashTime = performance.now();
+          const unityCrashPlaytime = unityEndLoadingTime === 0 ? 0 : (unityCrashTime - unityEndLoadingTime) / 1000;
+          ym(window.yandexMetricaCounterId, 'reachGoal', 'unityGameCrash', { unityCrashPlaytime: unityCrashPlaytime });
+        };
         ym(window.yandexMetricaCounterId,'reachGoal','unityStart', { unityLoadTime: (unityEndLoadingTime - unityStartLoadingTime) / 1000 });
-      }).catch((message) => {
-        const unityCrashTime = performance.now();
-        const unityCrashPlaytime = unityEndLoadingTime === 0 ? 0 : (unityCrashTime - unityEndLoadingTime) / 1000;
-        ym(window.yandexMetricaCounterId,'reachGoal','unityCrash', { unityCrashPlaytime: unityCrashPlaytime });
-        alert(message);
+      }).catch((errorMessage) => {
+        ym(window.yandexMetricaCounterId, 'reachGoal', 'unityLoadingCrash');
+        alert(errorMessage);
       });
     }, 500); // Wait half a second before loading. Makes page more responsive on reload.
   </script>
