--- a/Samples~/WebGLTemplates/FullscreenWindow/index.html
+++ b/Samples~/WebGLTemplates/FullscreenWindow/index.html
@@ -63,7 +63,7 @@
       productName: "{{{ PRODUCT_NAME }}}",
       productVersion: "{{{ PRODUCT_VERSION }}}",
       matchWebGLToCanvasSize: true,
-      devicePixelRatio: 1.5, // Render scale
+      devicePixelRatio: {{{ parseFloat(RENDER_SCALE) ? parseFloat(RENDER_SCALE) : 1.5 }}},
     };
 
     const progressBar = document.querySelector("#progress-bar");
